@@ -1,3 +1,8 @@
+2013-08-14  Kazuyuki Shudo  <shudo@computer.org>
+
+	* build.xml
+	Removes Git-related files when a target "distclean" invoked.
+
 2013-06-12  Kazuyuki Shudo  <shudo@computer.org>
 
 	* lib/{servlet-api-*,jetty-*}.jar
